<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="allTaskTitlesViewModel"
            type="com.example.todoapp.ui.viewmodel.AllTaskTitlesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.bottomSheet.AllTaskListBottomSheet">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_list"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:text="@={allTaskTitlesViewModel.allTaskTitles.taskListTitle}"
            android:id="@+id/list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_task_list"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <Button
            app:layout_constraintTop_toBottomOf="@id/list_name"
            android:id="@+id/cancel"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"/>

        <Button
            app:layout_constraintTop_toTopOf="@id/cancel"
            app:layout_constraintBottom_toBottomOf="@id/cancel"
            android:id="@+id/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            app:layout_constraintLeft_toRightOf="@id/cancel"
            app:layout_constraintRight_toRightOf="parent"/>








    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
