<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.TaskDetailsFragment">

    <data>

        <variable
            name="subTaskViewModel"
            type="com.example.todoapp.ui.viewmodel.SubTaskViewModel" />

        <variable
            name="taskViewModel"
            type="com.example.todoapp.ui.viewmodel.TaskViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/task_completed"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="4dp"
            android:src="@drawable/ic_circle"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/title"
            app:layout_constraintWidth_percent=".2" />

        <EditText
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@={taskViewModel.task.title}"
            app:layout_constraintLeft_toRightOf="@id/task_completed"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent=".6" />

        <ImageView
            android:id="@+id/favourite"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_not_favourate"
            app:layout_constraintBottom_toBottomOf="@id/title"
            app:layout_constraintLeft_toRightOf="@id/title"
            app:layout_constraintTop_toTopOf="@id/title"
            app:layout_constraintWidth_percent=".2" />

        <TextView
            android:id="@+id/add_subtask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_add"
            android:text="@string/add_subtask"
            app:layout_constraintTop_toBottomOf="@id/title" />


        <ImageView

            android:id="@+id/subtask_completed"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="2dp"
            android:src="@drawable/ic_circle"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/subtask_title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/subtask_title"
            app:layout_constraintTop_toTopOf="@id/subtask_title"
            app:layout_constraintWidth_percent=".2" />

        <EditText
            android:id="@+id/subtask_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@={subTaskViewModel.subTask.title}"
            android:visibility="invisible"
            app:layout_constraintLeft_toRightOf="@id/subtask_completed"
            app:layout_constraintTop_toBottomOf="@id/add_subtask"
            app:layout_constraintWidth_percent=".6" />

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/add"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@id/subtask_title"
            app:layout_constraintLeft_toRightOf="@id/subtask_title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/subtask_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/subtask_list"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/details"
            app:layout_constraintTop_toBottomOf="@id/subtask_title" />

        <EditText
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={taskViewModel.task.details}"
            app:layout_constraintTop_toBottomOf="@id/subtask_list" />

        <EditText
            android:id="@+id/due_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/update"
            app:layout_constraintTop_toBottomOf="@id/details"
            app:layout_constraintVertical_bias="1" />


        <Button
            android:id="@+id/update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/details"
            app:layout_constraintVertical_bias="1" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>